Improved upgrades display on game ui (stats and xp still need to be linked to player)